Started on standard Ek9 library, lots more classes to add in an unit tests to complete.